MineField 클래스 구현

--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -141,12 +141,14 @@
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Cell.cpp" />
+    <ClCompile Include="MineField.cpp" />
     <ClCompile Include="MineSweeper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
     <ClInclude Include="Cell.h" />
     <ClInclude Include="CommonDeclarations.h" />
+    <ClInclude Include="MineField.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
