--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="src\Cell.cpp" />
     <ClCompile Include="src\Combats\DiceRolling.cpp" />
     <ClCompile Include="src\Combats\RockPaperScissor.cpp" />
+    <ClCompile Include="src\Combats\ShootTheMonster.cpp" />
     <ClCompile Include="src\MineField.cpp" />
     <ClCompile Include="src\MineSweeper.cpp" />
   </ItemGroup>
@@ -34,6 +35,7 @@
     <ClInclude Include="src\Combat.h" />
     <ClInclude Include="src\Combats\DiceRolling.h" />
     <ClInclude Include="src\Combats\RockPaperScissor.h" />
+    <ClInclude Include="src\Combats\ShootTheMonster.h" />
     <ClInclude Include="src\CommonDeclarations.h" />
     <ClInclude Include="src\MineField.h" />
     <ClInclude Include="src\resource.h" />
