--- a/MineSweeper.vcxproj.filters
+++ b/MineSweeper.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\Combats\DiceRolling.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\Combats\ShootTheMonster.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\MineField.h">
@@ -63,6 +66,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="src\Combats\DiceRolling.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Combats\ShootTheMonster.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
