--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="src\Combats\ShootTheMonster.cpp" />
     <ClCompile Include="src\MineField.cpp" />
     <ClCompile Include="src\MineSweeper.cpp" />
+    <ClCompile Include="src\Stage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Block.h" />
@@ -39,6 +40,7 @@
     <ClInclude Include="src\CommonDeclarations.h" />
     <ClInclude Include="src\MineField.h" />
     <ClInclude Include="src\resource.h" />
+    <ClInclude Include="src\Stage.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
