--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\Board.cpp" />
     <ClCompile Include="src\Cell.cpp" />
     <ClCompile Include="src\Combats\DiceRolling.cpp" />
+    <ClCompile Include="src\Combats\OddOrEven.cpp" />
     <ClCompile Include="src\Combats\RockPaperScissor.cpp" />
     <ClCompile Include="src\Combats\ShootTheMonster.cpp" />
     <ClCompile Include="src\MineField.cpp" />
@@ -35,6 +36,7 @@
     <ClInclude Include="src\Cell.h" />
     <ClInclude Include="src\Combat.h" />
     <ClInclude Include="src\Combats\DiceRolling.h" />
+    <ClInclude Include="src\Combats\OddOrEven.h" />
     <ClInclude Include="src\Combats\RockPaperScissor.h" />
     <ClInclude Include="src\Combats\ShootTheMonster.h" />
     <ClInclude Include="src\CommonDeclarations.h" />
