주사위 맞추기 전투 상황 구현, 이벤트 핸들러 구현, 탈출구가 올바르게 생성되지 않는 오류 수정, 30px에 맞게 이미지 리사이징

--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -20,8 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Block.cpp" />
+    <ClCompile Include="src\BlockBreakHandler.cpp" />
     <ClCompile Include="src\Board.cpp" />
     <ClCompile Include="src\Cell.cpp" />
+    <ClCompile Include="src\Combats\DiceMatching.cpp" />
     <ClCompile Include="src\Combats\DiceRolling.cpp" />
     <ClCompile Include="src\Combats\OddOrEven.cpp" />
     <ClCompile Include="src\Combats\RockPaperScissor.cpp" />
@@ -32,9 +34,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Block.h" />
+    <ClInclude Include="src\BlockBreakHandler.h" />
     <ClInclude Include="src\Board.h" />
     <ClInclude Include="src\Cell.h" />
     <ClInclude Include="src\Combat.h" />
+    <ClInclude Include="src\Combats\DiceMatching.h" />
     <ClInclude Include="src\Combats\DiceRolling.h" />
     <ClInclude Include="src\Combats\OddOrEven.h" />
     <ClInclude Include="src\Combats\RockPaperScissor.h" />
