--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="src\Combats\ShootTheMonster.cpp" />
     <ClCompile Include="src\MineField.cpp" />
     <ClCompile Include="src\MineSweeper.cpp" />
+    <ClCompile Include="src\PRtest.cpp" />
     <ClCompile Include="src\Stage.cpp" />
   </ItemGroup>
   <ItemGroup>
