게임 방법을 설명하는 가이드 클래스 구현, 이미지 폴더 정리

--- a/MineSweeper.vcxproj
+++ b/MineSweeper.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="src\Combats\OddOrEven.cpp" />
     <ClCompile Include="src\Combats\RockPaperScissor.cpp" />
     <ClCompile Include="src\Combats\ShootTheMonster.cpp" />
+    <ClCompile Include="src\GameGuide.cpp" />
     <ClCompile Include="src\Item.cpp" />
     <ClCompile Include="src\MineField.cpp" />
     <ClCompile Include="src\MineSweeper.cpp" />
@@ -44,6 +45,7 @@
     <ClInclude Include="src\Combats\OddOrEven.h" />
     <ClInclude Include="src\Combats\RockPaperScissor.h" />
     <ClInclude Include="src\Combats\ShootTheMonster.h" />
+    <ClInclude Include="src\GameGuide.h" />
     <ClInclude Include="src\Item.h" />
     <ClInclude Include="src\MineField.h" />
     <ClInclude Include="src\resource.h" />
